Actualización del sistema de préstamo

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- FOOTER -->
     <footer class="footer">
         <h3>Integrantes del Equipo</h3>
-        <p>Nombre Completo y Código &nbsp;&nbsp;&nbsp; Nombre Completo y Código</p>
+        <p>NOE ISAI HERNANDEZ RIVAS SMSS010623 &nbsp;&nbsp;&nbsp; DANIELA KRISTEL MARQUEZ CHAVEZ SMSS089923</p>
     </footer>
 
 <script src="app.js"></script>
